// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders fully 1`] = `
<UserBoxUnauthenticated
  onRegister={[Function]}
  onSignIn={[Function]}
  showRegisterButton={true}
/>
`;

exports[`renders sso only 1`] = `null`;

exports[`renders sso only without logout button 1`] = `null`;

exports[`renders without logout button 1`] = `
<UserBoxUnauthenticated
  onRegister={[Function]}
  onSignIn={[Function]}
  showRegisterButton={true}
/>
`;

exports[`renders without register button 1`] = `
<UserBoxUnauthenticated
  onSignIn={[Function]}
  showRegisterButton={false}
/>
`;
